# build

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  123Movies Watch F9 2021 Full Movie Online Free  AGENTS.md  CHANGELOG.rst  LICENSE  README.md  build.py  codecov.yml  constraints.txt  noxfile.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini  tox.toml  zizmor.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: build.yml  cd.yml  check.yml  checks.yml  docs.yml  mypy.yml  pre-release.yml  reusable-change-detection.yml  reusable-docs.yml  reusable-pytest.yml  reusable-type.yml  test.yml  tests.yml  zizmor.yml
casei/: __main__.py
docs/: Makefile  api.rst  changelog.rst  cli.rst  conf.py  index.rst  installation.rst  mission.rst  release.rst  requirements.txt  test_suite.rst
docs/_static/: custom.css
docs/changelog/: 1003.bugfix.rst  1007.bugfix.rst  1015.bugfix.rst  1016.bugfix.rst  1020.misc.rst  1021.misc.rst  1031.bugfix.rst  1033.misc.rst  1036.feature.rst  1038.bugfix.rst  1039.bugfix.rst  1040.bugfix.rst  1044.bugfix.rst  1048.misc.rst  1049.misc.rst  1056.bugfix.rst  1058.misc.rst  1059.misc.rst  1060.misc.rst  1062.misc.rst  1093.misc.rst  1098.bugfix.rst  1099.misc.rst  1100.bugfix.rst  1107.misc.rst  1110.misc.rst  1111.bugfix.rst  1113.misc.rst  1117.misc.rst  1118.bugfix.rst  1119.bugfix.rst  1120.bugfix.rst  1121.bugfix.rst  1122.misc.rst  1123.bugfix.rst  1124.misc.rst  1125.bugfix.rst  1128.misc.rst  1132.misc.rst  1135.misc.rst  (+28 more)
docs/development/: contributing.rst  release.rst
docs/explanation/: build-backends.rst  how-it-works.rst
docs/how-to/: basic-usage.rst  choosing-tools.rst  ci-cd.rst  config-settings.rst  corporate-environments.rst  install.rst  troubleshooting.rst
docs/reference/: api.rst  cli.rst  environment-variables.rst
docs/source/: api.rst  build.rst  conf.py  differences.rst  index.rst  installation.rst  modules.rst
docs/tutorial/: getting-started.rst
tasks/: release.py
tests/: __init__.py  conftest.py  constraints.txt  test_compat_tarfile.py  test_ctx_logger.py  test_env.py  test_integration.py  test_main.py  test_main_helpers.py  test_module.py  test_projectbuilder.py  test_self_packaging.py  test_util.py  test_version.py
