[build-system]
requires = ["flit-core >= 3.11"]
build-backend = "flit_core.buildapi"

[project]
name = "build"
description = "A simple, correct Python build frontend"
readme = "README.md"
requires-python = ">= 3.9"
license = "MIT"
authors = [
  { name = "Filipe Laíns", email = "lains@riseup.net" },
  { name = "Bernát Gábor", email = "gaborjbernat@gmail.com" },
  { name = "layday", email = "layday@protonmail.com" },
  { name = "Henry Schreiner", email = "henryschreineriii@gmail.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
urls.changelog = "https://build.pypa.io/en/stable/changelog.html"
urls.homepage = "https://build.pypa.io"
urls.issues = "https://github.com/pypa/build/issues"
urls.source = "https://github.com/pypa/build"
# Version read from __version__ field in __init__.py by Flit
dynamic = ["version"]
dependencies = [
  "packaging >= 24.0",
  "pyproject_hooks",
  # not actually a runtime dependency, only supplied as there is not "recommended dependency" support
  'colorama; os_name == "nt"',
  'importlib-metadata >= 4.6; python_full_version < "3.10.2"',  # Not required but fixes a stdlib bug
  'tomli >= 1.1.0; python_version < "3.11"',
]

[project.optional-dependencies]
uv = [
  "uv >= 0.1.18",
]
virtualenv = [
  "virtualenv >= 20.11; python_version < '3.10'",
  "virtualenv >= 20.17; python_version >= '3.10' and python_version < '3.14'",
  "virtualenv >= 20.31; python_version >= '3.14'",
]

[project.scripts]
pyproject-build = "build.__main__:entrypoint"

[project.entry-points."pipx.run"]
build = "build.__main__:entrypoint"

[dependency-groups]
extra = [
  "uv >= 0.1.18",
  "virtualenv >= 20.0.35",
]
docs = [
  "furo >= 2023.08.17",
  "sphinx ~= 7.0",
  "sphinx-argparse-cli >= 1.5",
  "sphinx-autodoc-typehints >= 1.10",
  "sphinx-issues >= 3.0.0",
]
test = [
  "filelock >= 3",
  "pytest >= 6.2.4",
  "pytest-cov >= 2.12",
  "pytest-mock >= 2",
  "pytest-rerunfailures >= 9.1",
  "pytest-xdist >= 1.34",
  "wheel >= 0.36.0",
  'setuptools >= 42.0.0; python_version < "3.10"',
  'setuptools >= 56.0.0; python_version == "3.10"',
  'setuptools >= 56.0.0; python_version == "3.11"',
  'setuptools >= 67.8.0; python_version >= "3.12"',
  "setuptools_scm >= 6",
  { include-group = "extra" },
]
typing = [
  "importlib-metadata >= 5.1",
  "tomli",
  "typing-extensions >= 3.7.4.3",
  "types-colorama",
  { include-group = "extra" },
]
mypy = [
  "mypy ~= 1.18.2",
  { include-group = "typing" },
]
dev = [
  "flit-core",
  { include-group = "test" },
  { include-group = "mypy" },
]

[tool.flit.sdist]
include = ["tests/", ".gitignore", "CHANGELOG.rst", "docs/", ".dockerignore", "tox.ini"]
exclude = ["**/__pycache__", "docs/_build", "**/*.egg-info", "tests/packages/*/build"]


[tool.coverage.run]
source = [
  "build",
  "tests",
]
omit = ["tests/conftest.py"]
disable_warnings = [
  "module-not-measured",  # Triggers in multithreaded context on build
  "no-sysmon",
]

[tool.coverage.report]
exclude_also = [
  '^\s*raise NotImplementedError\b',
  "if typing.TYPE_CHECKING:",
]

[tool.coverage.paths]
build = [
  "src",
  "*/site-packages",
  '*\site-packages',
]

[tool.coverage.html]
show_contexts = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--strict-config", "--strict-markers"]
log_level = "INFO"
testpaths = ["tests"]
xfail_strict = true
junit_family = "xunit2"
norecursedirs = "tests/integration/*"
markers = [
  "contextvars",
  "isolated",
  "pypy3323bug",
  "network",
]
filterwarnings = [
  "error",
  "ignore:path is deprecated.:DeprecationWarning",
  "ignore:The --rsyncdir command line argument and rsyncdirs config variable are deprecated.:DeprecationWarning",
  "ignore:check_home argument is deprecated and ignored:DeprecationWarning:",  # PyPy 3.11
  "default:Python 3.14 will, by default, filter extracted tar archives:DeprecationWarning",
  "default:unclosed:ResourceWarning", # Python 3.11 Windows
]

[tool.mypy]
files = "src"
python_version = "3.9"
strict = true
enable_error_code = ["ignore-without-code", "truthy-bool", "redundant-expr"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
  "virtualenv", # Optional dependency
]
ignore_missing_imports = true

[tool.ruff]
exclude = [
  "tests/packages/*/pyproject.toml",
  "tests/packages/test-bad-syntax",
]
line-length = 127

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = [
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "C9",   # mccabe
  "I",    # isort
  "PGH",  # pygrep-hooks
  "RUF",  # ruff
  "UP",   # pyupgrade
  "W",    # pycodestyle
  "YTT",  # flake8-2020
  "TRY",  # tryceratops
  "EM",   # flake8-errmsg
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
lines-between-types = 1
lines-after-imports = 2

[tool.check-wheel-contents]
ignore = [
  "W005",  # We _are_ build
]

[tool.repo-review]
ignore = ["PC140"]  # mypy in tox


[tool.bumpversion]
current_version = "1.0.0"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'

[[tool.bumpversion.files]]
filename = "src/build/__init__.py"
search = "__version__ = '{current_version}'"
