[metadata]
name = build
version = 0.0.3.1
long_description = file: README.md
long_description_content_type = text/markdown
author = Filipe Laíns
author_email = lains@archlinux.org
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
project_urls =
    homepage = https://github.com/FFY00/python-build

[options]
packages = build
install_requires =
    packaging
    pep517
    toml
    importlib-metadata;python_version < "3.8"
    typing;python_version<"3"
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*

[options.entry_points]
console_scripts =
    python-build = build.__main__:main

[options.extras_require]
doc =
    sphinx
    sphinx-autodoc-typehints
    sphinxcontrib-autoprogram
    Pallets-Sphinx-Themes
test =
    pytest
    pytest-mock
    pytest-cov

[flake8]
max-line-length = 127
max-complexity = 10

[mypy]
ignore_missing_imports = True
strict = True

[isort]
line_length = 127
lines_between_types = 1
lines_after_imports = 2
known_first_party = build
known_third_party = nox,pallets_sphinx_themes,pep517,pytest,setuptools,toml
