[metadata]
name = build
version = 0.1.0
description = A simple, correct PEP517 package builder
long_description = file: README.md
long_description_content_type = text/markdown
author = Filipe Laíns
author_email = lains@riseup.net
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
project_urls =
    homepage = https://github.com/pypa/build

[options]
packages = find:
install_requires =
    packaging
    pep517>=0.9
    toml
    importlib-metadata;python_version < "3.8"
    typing;python_version<"3"
    virtualenv>=20.0.35;python_version < "3"
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
package_dir =
    =src

[options.entry_points]
console_scripts =
    pyproject-build = build.__main__:entrypoint

[options.extras_require]
doc =
    furo
    sphinx
    sphinx-autodoc-typehints
    sphinxcontrib-autoprogram
test =
    filelock
    pytest
    pytest-cov
    pytest-mock
    pytest-xdist>=1.34
typing =
    mypy==0.790
    typing-extensions>=3.7.4.3

[options.package_data]
build =
    py.typed

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[tool:pytest]
junit_family = xunit2
norecursedirs = tests/integration/*
markers =
    isolated

[flake8]
max-line-length = 127
max-complexity = 10
extend-ignore = E203

[mypy]
ignore_missing_imports = True
strict = True

[coverage:run]
omit =
    setup.py
    *bin/pyproject-build
    *bin\pyproject-build.exe

[coverage:report]
exclude_lines =
    \#\s*pragma: no cover
    ^\s*raise NotImplementedError\b

[coverage:paths]
source =
    src
    */site-packages
    *\site-packages

[coverage:html]
show_contexts = true
