[metadata]
name = build
version = 0.9.0
description = A simple, correct PEP 517 build frontend
long_description = file: README.md
long_description_content_type = text/markdown
author = Filipe Laíns
author_email = lains@riseup.net
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
project_urls =
    homepage = https://github.com/pypa/build
    changelog = https://pypa-build.readthedocs.io/en/stable/changelog.html

[options]
packages = find:
install_requires =
    packaging>=19.0
    pep517>=0.9.1
    colorama;os_name == "nt" # not actually a runtime dependency, only supplied as there is not "recommended dependency" support
    importlib-metadata>=0.22;python_version < "3.8"
    tomli>=1.0.0;python_version < "3.11" # toml can be used instead -- in case it makes bootstrapping easier
python_requires = >=3.6
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pyproject-build = build.__main__:entrypoint
pipx.run =
    build = build.__main__:entrypoint

[options.extras_require]
docs =
    furo>=2021.08.31
    sphinx~=4.0
    sphinx-argparse-cli>=1.5
    sphinx-autodoc-typehints>=1.10
test =
    filelock>=3
    pytest>=6.2.4
    pytest-cov>=2.12
    pytest-mock>=2
    pytest-rerunfailures>=9.1
    pytest-xdist>=1.34
    toml>=0.10.0
    wheel>=0.36.0
    setuptools>=42.0.0;python_version < "3.10"
    setuptools>=56.0.0;python_version >= "3.10"
typing =
    importlib-metadata>=4.6.4
    mypy==0.950
    typing-extensions>=3.7.4.3;python_version < "3.8"
virtualenv =
    virtualenv>=20.0.35

[options.package_data]
build =
    py.typed
